<resources>
    <string name="app_name">FeedMe</string>
    <string name="title_activity_acceuil">Acceuil</string>
    <string name="title_activity_searchable">Searchable Activity</string>
    <string name="search_hint">Recherche</string>

    <!-- Start of Menu Items -->
    <string name="menu_search">Recherche</string>
    <string name="menu_basket">Pagnet</string>
    <string name="menu_about">A Propos</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_rate">Evaluez Nous</string>
    <string name="menu_account">Votre Compte</string>
    <!-- End of Menu Items -->

    <!-- Start of Fragment Names -->
    <string name="acceuil_fragment_text">ACCEUIL</string>
    <string name="filtrer_fragment_text">FILTRER</string>
    <string name="favoris_fragment_text">FAVORIS</string>
    <string name="lecons_fragment_text">LECONS</string>
    <!-- End of Fragment Names -->

    <!-- Start of Acceuil Fragment Literature -->
    <string name="row_img_desc">Company Logo</string>
    <string name="resto_name">Restaurant Name</string>
    <string name="food_name">Food Name</string>
    <string name="food_price">Food Price</string>
    <!-- End of Acceuil Fragment Literature -->

    <!-- Start of SingleItem Activity Literature -->
    <string name="title_activity_single_item">Single Item</string>
    <!-- End of SingleItem Activity Literature -->

</resources>
