<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="android.internest.com.feedme.Acceuil">
    <item
        android:id="@+id/go_to_about"
        android:orderInCategory="1"
        android:title="@string/menu_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/go_to_contact"
        android:orderInCategory="2"
        android:title="@string/menu_contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_rate"
        android:orderInCategory="3"
        android:title="@string/menu_rate"
        app:showAsAction="never" />
    <item
        android:id="@+id/go_to_account"
        android:orderInCategory="4"
        android:title="@string/menu_account"
        app:showAsAction="never" />
</menu>
