<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="android.internest.com.feedme.SingleItem"
    tools:showIn="@layout/activity_single_item">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:id="@+id/relativeLayout"
            android:padding="5dp"
            android:background="@drawable/placeholder">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/restoIcon"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:scaleType="fitXY"
                android:layout_margin="5dp"
                android:contentDescription="@string/row_img_desc" />

        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:id="@+id/restoName"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/resto_name"
            android:background="@color/colorWhite"
            android:textColor="@color/colorBlack"
            android:gravity="center" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:id="@+id/foodName"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/food_name"
            android:background="@color/colorWhite"
            android:gravity="center" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/foodPrice"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/food_price"
            android:background="@color/colorWhite"
            android:textColor="@color/colorPrimaryLight"
            android:gravity="center" />

    </LinearLayout>

</RelativeLayout>
